# aoc2025_python

./: .editorconfig  .gitignore  devenv.nix  main.py  pyproject.toml
aoc2025_python/: puzzle.py  safe.py
scripts/: day01.py
tests/safe/: test_rotate_dial.py
